--- a/web/src/main/web/WEB-INF/views/index.html
+++ b/web/src/main/web/WEB-INF/views/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 
-    <link rel='stylesheet' type='text/css' href='resources/reset.css'/>
-    <link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css'/>
-    <link rel='stylesheet' type='text/css' href='resources/jquery_webcalendar.css'/>
-    <link rel='stylesheet' type='text/css' href='resources/webcalendar.css'/>
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
-    <script type='text/javascript' src='resources/jquery.weekcalendar.js'></script>
-    <script type='text/javascript' src='resources/webcalendar.js'></script>
+    <link rel='stylesheet' type='text/css' href='../../resources/reset.css'/>
+    <link rel='stylesheet' type='text/css' href='../../resources/jquery-ui-1.8rc3.custom.css'/>
+    <link rel='stylesheet' type='text/css' href='../../resources/jquery_webcalendar.css'/>
+    <link rel='stylesheet' type='text/css' href='../../resources/webcalendar.css'/>
+    <script type='text/javascript' src='../../resources/jquery-1.4.2.min.js'></script>
+    <script type='text/javascript' src='../../resources/jquery-ui-1.8rc3.custom.min.js'></script>
+    <script type='text/javascript' src='../../resources/jquery.weekcalendar.js'></script>
+    <script type='text/javascript' src='../../resources/webcalendar.js'></script>
 
 
 </head>
